simplify EnemyShipFormation pattern logic and cleanup